first version of data model with association is done
