# routes/content.js
@@ -1,11 +1,13 @@
 const express = require('express');
 const router = express.Router();
+const auth = require("../middleware/auth");
+const sample = require("../middleware/sample");
 
-// controllers
-// const { saveProducts, savePage, saveProductsFromSearch, savePageFromSearch } = require('../controllers/project');
-
-// router.get('/')
-// router.post('/products-from-history', saveProducts, savePage);
-// router.post('/products-from-search', saveProductsFromSearch, savePageFromSearch);
+router.post('/', auth, sample);
+router.put('/content_id/:content_id', auth, sample);
+router.delete('/content_id/:content_id', auth, sample);
+router.get('/content_id/:content_id', auth, sample);
+router.get('/project_id/:project_id', auth, sample);
+router.get('/trail', auth, sample);
 
 module.exports = router; 
