# routes/recommend.js
@@ -1,11 +1,11 @@
 const express = require('express');
 const router = express.Router();
+const auth = require("../middleware/auth");
+const sample = require("../middleware/sample");
 
-// // controllers
-// const { saveProducts, savePage, saveProductsFromSearch, savePageFromSearch } = require('../controllers/project');
-
-// router.get('/')
-// router.post('/products-from-history', saveProducts, savePage);
-// router.post('/products-from-search', saveProductsFromSearch, savePageFromSearch);
+router.get('/feed/:user_id', auth, sample);
+router.get('/people/:user_id', auth, sample);
+router.get('/similar/content_id/:content_id', auth, sample);
+router.get('/paid', auth, sample);
 
 module.exports = router; 
