# routes/search.js
@@ -1,11 +1,8 @@
 const express = require('express');
 const router = express.Router();
+const auth = require("../middleware/auth");
+const sample = require("../middleware/sample");
 
-// controllers
-// const { saveProducts, savePage, saveProductsFromSearch, savePageFromSearch } = require('../controllers/project');
-
-// router.get('/')
-// router.post('/products-from-history', saveProducts, savePage);
-// router.post('/products-from-search', saveProductsFromSearch, savePageFromSearch);
+router.get('/search', auth, sample);
 
 module.exports = router; 
